[20020113]
* mlterm configuration protocol is decided and implemented.(see doc/en/PROTOCOL)
* cursor highlight bug is fixed.

[20020111]
* cursor form is changed when window is focused or unfocused.
* when a character whose color is reversed is drawn under wall paper or tranparent mode ,
  not background image but the background color of the charcter is used.
  (thanks to Masao Uebayashi san)
* ESC ] 20 ; pt BEL sequence is supported.(thanks to Minami Hirokazu san)

[20020110]
* big5 unstandard characters can be converted to and from ucs4.

[20020109]
* -r/--fade/fade_ratio option is added.
* infinite loop owing to malformed escape sequence like "ESC ] ;"
  can be escaped by pressing LF.(Minami Hirokazu san)

[20020108]
* fribidi 0.10.0(where FriBidiStrIndex is 32bit , not 16bit) is supported.
* selecting region policy is changed(character is selected after mouse
  pointer passing over it) , and some bug are fixed.

[20020108]
* mlterm with --enable-debug option can dump core owing to failure of 
  list operations. fixed. (thanks to Karl Koehler)
* ISCII / Bidi codes are more shared.
* mlterm.spec is updated (thanks to Kiyoshi Nishizawa san)
* ISCII characters in backscroll logs cannot be selected(and copyed) correctly.
  fixed.
* Window is not resized when font size is changed. fixed.
* -g option accepts minus x/y position.
* vertical tab sometimes fails. fixed.(thanks to nekoie san)
* default font size range is 6 - 30.

[20020106]
* ISCII support codes are added. (still unstable)
* INIT_PARSER short cut key is removed and "Full Rest" button is added to mlconfig. 
* when color rgb is explicitly assigned in ~/.mlterm/color , reversed color is not
  drawn correctly under Anti Alias mode. fixed. (thanks to nekoie san)
* ISO-8859-11 can be used as a -E option value.
* ~/.mlterm/vlfont is renamed to ~/.mlterm/vfont
* -V/--varlen/use_variable_length_column option is renamed to 
  -V/--varwidth/use_variable_column_width
* Kochi Mincho sample is added to etc/aafont.
